tob/tps/.svn/pristine/8c/8cd0b10d04cd41df7f261b5ad283d7749dd55ed1.svn-base
./allumettes/ExpertTest.java:10: error: constructor ClassJeu in class ClassJeu cannot be applied to given types;
	Jeu jeu = new ClassJeu();
	          ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error
